# sevelte-python-d3fc

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.sh
backend/: main.py  requirements.txt
backend/data/: cities.csv  population.csv  sales.csv  stock_prices.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/lib/: config.ts
frontend/src/lib/components/: MapExample.svelte  PopulationChart.svelte  SalesChart.svelte  StockChart.svelte
frontend/src/routes/: +page.svelte
vizora/: __init__.py  __version__.py
vizora/cli/: __init__.py  main.py
vizora/core/: __init__.py  dashboard.py  data_manager.py  utils.py  visualization_engine.py
vizora/plugins/: __init__.py  base_plugin.py
